@@ -244,6 +244,8 @@ code {
 
 <p><strong>mouse_move_deadzone</strong> | <code>float, float : Deadzone while moving, Deadzone while not moving</code> | Adds a deadzone circle around the player to prevent erratic behavior when using mouse movement. Ideally, the deadzone when moving should be less than the deadzone when not moving. Defaults are 0.25 and 0.75 respectively.</p>
 
+<p><strong>passive_trigger_effect_stacking</strong> | <code>bool</code> | For backwards compatibility. Allows adding multiple of the same effect from a power with the same passive trigger. False by default.</p>
+
 <hr />
 
 <h4>EngineSettings: Resolution</h4>
