@@ -70,6 +70,7 @@ public:
 		bool save_fogofwar;
 		float mouse_move_deadzone_moving;
 		float mouse_move_deadzone_not_moving;
+		bool passive_trigger_effect_stacking;
 	};
 
 	class Resolutions {
