@@ -37,6 +37,7 @@ Engine features:
 * Added "in combat" LED effect for supported game controllers (i.e. Dual Shock 4).
 * Added 'offscreen_enemy_encounters' property to engine/combat.txt config.
 * Added 'expire_power' Power property.
+* Added backwards compatiblity option 'passive_trigger_effect_stacking' to engine/misc.txt.
 * Android: Enabled use of external input devices (gamepads, keyboards, mice)
 
 Engine fixes:
